# buildbuddy

./: .bazelignore  .bazelrc  .bazelversion  .editorconfig  .envrc  .gitattributes  .gitignore  .prettierignore  .prettierrc  .stylelintrc.json  .swcrc  09aba5b3.0fa9a3d9.js  0f0196cd.8a055681.js  1.2e0220db.js  10575ed8.4a83e634.js  16a9a08d.16528aea.js  17896441.8677b61a.js  2.78a238a6.js  2e7cda7e.0cf8f38e.js  30bb5118.83f01254.js  3c011724.440edc7d.js  404.html  44.647c7044.js  4c90a494.74a705fc.js  4cd42f1a.8ba9ae41.js  4cdd9aa0.05009598.js  4ddf3988.32446a6d.js  53e18611.fde0da4f.js  56a12a24.0c6b872d.js  5bac16cb.92dbe9bd.js  5fc6d064.cb83ef18.js  5fca9684.4258f15b.js  64b15419.d372d487.js  6ae8a29a.8fb9ed06.js  79a3896d.0ab4a5f4.js  7f28e8fb.d93562da.js  82247a8b.aa37f2a8.js  87b03b01.ef6b5fcf.js  92643879.bc0ee2f8.js  935f2afb.093d909c.js  (+125 more)
app/: BUILD.bazel  app.tsx  bundle.go  monaco.css  rollup.config.js  test_globals.d.ts
app/agent/: BUILD  agent_dialog.tsx
app/alert/: BUILD  alert.css  alert.tsx  alert_service.ts
app/auth/: BUILD  auth_service.ts  auth_service_test.ts  auth_service_test_setup.ts  certificate_download_link.tsx  github_auth.ts  google_auth.ts  user.ts
app/capabilities/: BUILD  capabilities.tsx
app/compare/: BUILD  compare.css  compare_actions.tsx  compare_execution_log_files.tsx  compare_execution_log_spawns.tsx  compare_invocations.tsx  diff_chunk.tsx  diff_preprocessing.tsx  diff_tree_node.tsx  line-diff.d.ts  tree_differ.tsx  tree_utils.ts
app/debug/: BUILD  debug.css  debug.tsx
app/docs/: BUILD  cache_code.tsx  setup.tsx  setup_code.tsx
app/errors/: BUILD  error_banner.tsx  error_service.ts  errors.css
app/favicon/: BUILD.bazel  favicon.ts
app/flame_chart/: BUILD  animated_value.ts  colors.ts  flame_chart.tsx  flame_chart_model.ts  profile_model.ts  profile_model_test.ts  style_constants.ts
app/footer/: BUILD  footer.tsx
app/format/: BUILD  format.tsx  format_test.ts
app/home/: BUILD  home.tsx
app/icons/: BUILD  file_icon.tsx  github.tsx  github_lucide.tsx  google.tsx  icons.css
app/invocation/: BUILD  action_compare_button.tsx  action_comparison_service.ts  artifacts_card.tsx  bazel_button.tsx  build_logs_card.tsx  cache_requests_card.tsx  child_invocation_card.tsx  child_invocations.tsx  compact_exec_log_action_edges.ts  compact_exec_log_action_edges_test.ts  compact_exec_log_index.ts  compact_exec_log_index_test.ts  error_card.tsx  execution_graph_card.tsx  execution_graph_model.ts  execution_response_utils.tsx  execution_status.tsx  failed_targets_card.tsx  invocation.css  invocation.tsx  invocation_action_card.tsx  invocation_action_card_redaction.ts  invocation_action_card_redaction_test.ts  invocation_action_input_node.tsx  invocation_action_tree_node.tsx  invocation_artifacts_card.tsx  invocation_bot_card.tsx  invocation_breakdown_card.tsx  invocation_build_logs_card.tsx  invocation_buttons.tsx  invocation_cache_card.tsx  invocation_cancel_button.tsx  invocation_card.tsx  invocation_compare_button.tsx  invocation_comparison_service.ts  invocation_coverage_card.tsx  invocation_details_card.tsx  invocation_error_card.tsx  invocation_events.tsx  (+42 more)
app/lib/: BUILD  animation.ts  dispose.ts  dom.ts  events.ts  memo.ts  mouse.ts  svg.ts  time.ts
app/log/: BUILD  fake_fetcher.tsx  fake_fetcher_data.tsx  invocation_log.tsx  log.css  log.tsx  simple_lazylog.tsx
app/menu/: BUILD  menu.tsx
app/picker/: BUILD  picker.css  picker.tsx  picker_service.ts
app/preferences/: BUILD  preferences.ts
app/profile/: BUILD  profile.css  profile.tsx
app/root/: BUILD.bazel  colors.css  root.css  root.tsx
app/router/: BUILD  router.tsx  router_params.ts  routes.tsx
app/service/: BUILD.bazel  buildbuddy_stream_service.ts  rpc_service.ts  stream.ts
app/shortcuts/: BUILD  shortcuts.tsx
app/terminal/: BUILD  ansi.tsx  copy.ts  defs.bzl  row.tsx  terminal.css  terminal.tsx  terminal1.css  terminal2.css  terminal_copy_test.ts  text.tsx  text_test.ts
app/tests/: BUILD  css_colors_test.py
app/testutil/: BUILD  example_test.tsx  react.ts
app/trace/: BUILD  compact_trace.ts  compact_trace_test.ts  constants.ts  event_hovercard.tsx  timing_profile_drop_target.tsx  trace_events.ts  trace_events_test.ts  trace_viewer.css  trace_viewer.tsx  trace_viewer_model.ts  trace_viewer_panel.ts  trace_viewer_search.ts  trace_viewer_search_test.ts
app/util/: BUILD  animated_value.ts  animation_loop.ts  async.ts  async_test.ts  cache.ts  cache.tsx  cache_test.ts  canvas.ts  clipboard.ts  color.ts  date.ts  diff.tsx  dom.ts  download.ts  errors.ts  exit_codes.ts  file_types.ts  get_tree.ts  get_tree_test.ts  git.ts  git_test.ts  github.tsx  intern.ts  intern_test.ts  lcov.ts  math.ts  memo.ts  platform.ts  popup.ts  proto.ts  react.tsx  react_test.tsx  remote_runner.tsx  rpc.ts  scroller.ts  shlex.ts  shlex_test.ts  sort.ts  time_delta.ts  (+4 more)
enterprise/app/: BUILD  BUILD.bazel  app.tsx  bundle.go  esbuild.config.mjs  monaco_worker.js
org_golang_google_grpc/: BUILD.bazel  WORKSPACE  go.mod  go.sum
org_golang_google_grpc/admin/: BUILD.bazel
org_golang_google_grpc/attributes/: BUILD.bazel
org_golang_google_grpc/authz/: BUILD.bazel
org_golang_google_grpc/backoff/: BUILD.bazel
org_golang_google_grpc/balancer/: BUILD.bazel
org_golang_google_grpc/benchmark/: BUILD.bazel
org_golang_google_grpc/binarylog/: BUILD.bazel
org_golang_google_grpc/channelz/: BUILD.bazel
org_golang_google_grpc/codes/: BUILD.bazel
org_golang_google_grpc/connectivity/: BUILD.bazel
org_golang_google_grpc/credentials/: BUILD.bazel
org_golang_google_grpc/encoding/: BUILD.bazel
org_golang_google_grpc/grpclog/: BUILD.bazel
org_golang_google_grpc/health/: BUILD.bazel
org_golang_google_grpc/internal/: BUILD.bazel
org_golang_google_grpc/interop/: BUILD.bazel
org_golang_google_grpc/keepalive/: BUILD.bazel
rules/: BUILD.bazel  coverage_transitions.bzl  platform_transitions.bzl  typescript_proto_library.bzl  utils.bzl
website/: .gitignore  BUILD.bazel  README.md  docusaurus.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sidebars.js
(+54542 files in other folders)
