install_static_dependencies_ext = use_extension(":deps.bzl", "install_static_dependencies_ext")
use_repo(
    install_static_dependencies_ext,
    "com_github_bazelbuild_bazelisk-bazelisk-darwin-amd64",
    "com_github_bazelbuild_bazelisk-bazelisk-darwin-arm64",
    "com_github_bazelbuild_bazelisk-bazelisk-linux-amd64",
    "com_github_bazelbuild_bazelisk-bazelisk-linux-arm64",
    "com_github_buildbuddy_io_podman_static_podman-linux-amd64",
    "com_github_buildbuddy_io_podman_static_podman-linux-arm64",
    "com_github_buildbuddy_io_protoc_gen_protobufjs",
    "com_github_buildbuddy_io_soci_snapshotter-static-linux-amd64",
    "com_github_containerd_containerd-linux-amd64",
    "com_github_containerd_containerd-linux-arm64",
    "com_github_containerd_stargz_snapshotter-v0.11.4-linux-amd64",
    "com_github_containers_crun_crun-linux-amd64",
    "com_github_containers_crun_crun-linux-arm64",
    "com_github_firecracker_microvm_firecracker",
    "com_github_firecracker_microvm_firecracker_arm64",
    "com_github_googlecloudplatform_docker-credential-gcr-linux-amd64",
    "com_github_googlecloudplatform_docker-credential-gcr-linux-arm64",
    "com_github_krallin_tini_tini-linux-amd64",
    "com_github_krallin_tini_tini-linux-arm64",
    "com_github_opencontainers_runc_runc-linux-amd64",
    "com_github_opencontainers_runc_runc-linux-arm64",
    "com_github_redis_redis-redis-server-v6.2.1-linux-arm64",
    "com_github_redis_redis-redis-server-v6.2.1-linux-x86_64",
    "com_github_redis_redis-redis-server-v6.2.6-darwin-arm64",
    "com_github_redis_redis-redis-server-v6.2.6-darwin-x86_64",
    "com_github_rootless_containers_rootlesskit-linux-amd64",
    "com_github_rootless_containers_rootlesskit-linux-arm64",
    "io_bazel_bazel-5.3.2-darwin-arm64",
    "io_bazel_bazel-5.3.2-darwin-x86_64",
    "io_bazel_bazel-5.3.2-linux-arm64",
    "io_bazel_bazel-5.3.2-linux-x86_64",
    "io_bazel_bazel-6.5.0-darwin-arm64",
    "io_bazel_bazel-6.5.0-darwin-x86_64",
    "io_bazel_bazel-6.5.0-linux-arm64",
    "io_bazel_bazel-6.5.0-linux-x86_64",
    "io_bazel_bazel-7.1.0-darwin-arm64",
    "io_bazel_bazel-7.1.0-darwin-x86_64",
    "io_bazel_bazel-7.1.0-linux-arm64",
    "io_bazel_bazel-7.1.0-linux-x86_64",
    "io_bazel_bazel-8.1.1-darwin-arm64",
    "io_bazel_bazel-8.1.1-darwin-x86_64",
    "io_bazel_bazel-8.1.1-linux-arm64",
    "io_bazel_bazel-8.1.1-linux-x86_64",
    "net_busybox_busybox-linux-amd64",
    "net_busybox_busybox-linux-arm64",
    "org_kernel_git_linux_kernel-vmlinux",
    "org_kernel_git_linux_kernel-vmlinux-arm64",
    "org_llvm_llvm_clang-format_linux-x86_64",
    "org_llvm_llvm_clang-format_macos-x86_64",
)
