load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpc",
    srcs = [
        "backoff.go",
        "balancer_conn_wrappers.go",
        "call.go",
        "clientconn.go",
        "codec.go",
        "dialoptions.go",
        "doc.go",
        "interceptor.go",
        "picker_wrapper.go",
        "pickfirst.go",
        "preloader.go",
        "resolver_conn_wrapper.go",
        "rpc_util.go",
        "server.go",
        "service_config.go",
        "shared_buffer_pool.go",
        "stream.go",
        "trace.go",
        "version.go",
    ],
    importpath = "google.golang.org/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//backoff",
        "//balancer",
        "//balancer/base",
        "//balancer/roundrobin",
        "//channelz",
        "//codes",
        "//connectivity",
        "//credentials",
        "//credentials/insecure",
        "//encoding",
        "//encoding/proto",
        "//grpclog",
        "//internal",
        "//internal/backoff",
        "//internal/balancer/gracefulswitch",
        "//internal/balancerload",
        "//internal/binarylog",
        "//internal/channelz",
        "//internal/envconfig",
        "//internal/grpclog",
        "//internal/grpcrand",
        "//internal/grpcsync",
        "//internal/grpcutil",
        "//internal/idle",
        "//internal/metadata",
        "//internal/pretty",
        "//internal/resolver",
        "//internal/resolver/dns",
        "//internal/resolver/passthrough",
        "//internal/resolver/unix",
        "//internal/serviceconfig",
        "//internal/status",
        "//internal/transport",
        "//keepalive",
        "//metadata",
        "//peer",
        "//resolver",
        "//serviceconfig",
        "//stats",
        "//status",
        "//tap",
        "@org_golang_x_net//trace",
    ],
)

alias(
    name = "go_default_library",
    actual = ":grpc",
    visibility = ["//visibility:public"],
)

go_test(
    name = "grpc_test",
    srcs = [
        "clientconn_authority_test.go",
        "clientconn_parsed_target_test.go",
        "clientconn_test.go",
        "codec_test.go",
        "default_dial_option_server_option_test.go",
        "grpc_test.go",
        "picker_wrapper_test.go",
        "resolver_test.go",
        "rpc_util_test.go",
        "server_ext_test.go",
        "server_test.go",
        "service_config_test.go",
        "shared_buffer_pool_test.go",
        "stream_test.go",
        "trace_test.go",
    ],
    embed = [":grpc"],
    deps = [
        "//attributes",
        "//backoff",
        "//balancer",
        "//codes",
        "//connectivity",
        "//credentials",
        "//credentials/insecure",
        "//encoding",
        "//encoding/proto",
        "//internal",
        "//internal/backoff",
        "//internal/balancer/stub",
        "//internal/grpcsync",
        "//internal/grpctest",
        "//internal/stubserver",
        "//internal/testutils",
        "//internal/transport",
        "//interop/grpc_testing",
        "//keepalive",
        "//resolver",
        "//resolver/manual",
        "//serviceconfig",
        "//status",
        "//test/codec_perf",
        "//testdata",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_x_net//http2",
    ],
)
