load("//rules/pnpm:index.bzl", "pnpm")

package(default_visibility = ["//visibility:public"])

SRCS = glob([
    "src/**",
    "static/**",
]) + [
    "docusaurus.config.js",
    "pnpm-lock.yaml",
    "sidebars.js",
    "//server/cmd/buildbuddy/yaml_doc:generate_mdx",
    "//server/metrics/generate_docs:generate_mdx",
    "//enterprise/server/cmd/server/yaml_doc:generate_mdx",
    "//enterprise/server/backends/prom/generate_docs:generate_mdx",
    "//enterprise/server/cmd/executor/yaml_doc:generate_mdx",
]

# Builds and bundles static marketing website into a .tar
pnpm(
    name = "website",
    srcs = SRCS,
    package = "package.json",
    tags = ["manual"],
)

# Starts marketing website server in development mode
pnpm(
    name = "start",
    srcs = SRCS,
    command = "start",
    package = "package.json",
    tags = ["manual"],
)

# Serves production marketing website bundle
pnpm(
    name = "serve",
    srcs = SRCS,
    command = "serve",
    package = "package.json",
    tags = ["manual"],
    deps = [
        ":website",
    ],
)
