load("//rules/typescript:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

exports_files(["root.css"])

ts_library(
    name = "root",
    srcs = glob(["*.tsx"]),
    strict = True,
    deps = [
        "//app/alert",
        "//app/auth",
        "//app/capabilities",
        "//app/compare",
        "//app/docs",
        "//app/errors",
        "//app/favicon",
        "//app/footer",
        "//app/invocation",
        "//app/menu",
        "//app/preferences",
        "//app/router",
        "//app/service",
        "//proto:user_ts_proto",
        "@npm//@types/react",
        "@npm//protobufjs",
        "@npm//react",
    ],
)
