load("//rules/typescript:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

exports_files(["root.css"])

ts_library(
    name = "root",
    srcs = ["root.tsx"],
    strict = True,
    deps = [
        "//:node_modules/@types/react",
        "//:node_modules/react",
        "//app/alert",
        "//app/auth:auth_service",
        "//app/capabilities",
        "//app/compare:compare_invocations",
        "//app/docs:setup",
        "//app/errors:error_service",
        "//app/favicon",
        "//app/footer",
        "//app/invocation",
        "//app/menu",
        "//app/preferences",
        "//app/router",
    ],
)
