load("//rules/typescript:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

exports_files(["root.css"])

ts_library(
    name = "root",
    srcs = ["root.tsx"],
    deps = [
        "//app/alert",
        "//app/auth:auth_service",
        "//app/capabilities",
        "//app/compare:compare_invocations",
        "//app/docs:setup",
        "//app/errors:error_service",
        "//app/favicon",
        "//app/footer",
        "//app/invocation",
        "//app/menu",
        "//app/preferences",
        "//app/router",
        "@npm//@types/react",
        "@npm//react",
    ],
)
