load("//rules/typescript:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "rpc_service",
    srcs = ["rpc_service.ts"],
    strict = True,
    deps = [
        "//:node_modules/protobufjs",
        "//:node_modules/rxjs",
        "//:node_modules/tslib",
        "//app/util:async",
        "//proto:buildbuddy_service_ts_proto",
        "//proto:context_ts_proto",
    ],
)
